@@ -237,7 +237,7 @@ Feature: Cucumber command line
 
   Scenario: Multiple formatters and outputs
     When I run cucumber --format progress --out tmp/progress.txt --format pretty --out tmp/pretty.txt  --dry-run features/lots_of_undefined.feature
-    And examples/self_test/tmp/progress.txt should contain
+    And "examples/self_test/tmp/progress.txt" should contain
       """
       UUUUU
 
@@ -245,7 +245,7 @@ Feature: Cucumber command line
       5 undefined steps
 
       """
-    And examples/self_test/tmp/pretty.txt should match
+    And "examples/self_test/tmp/pretty.txt" should match
       """
       Feature: Lots of undefined
 
@@ -362,7 +362,7 @@ Feature: Cucumber command line
 
   Scenario: Reformat files with --autoformat
     When I run cucumber --autoformat tmp/formatted features
-    Then examples/self_test/tmp/formatted/features/sample.feature should contain
+    Then "examples/self_test/tmp/formatted/features/sample.feature" should contain
       """
       @one
       Feature: Sample
